--- a/src/components/UI/Navbar/navbar.module.css
+++ b/src/components/UI/Navbar/navbar.module.css
@@ -1,11 +1,22 @@
+.navlogo{
+    margin-top: 10px;
+    margin-left: 5px;
+    width: 110px;
+}
 .navbar{
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 70px;
+    height: 80px;
+    background-color: rgb(49, 54, 53);
 }
 .navitems{
     display: inline-block;
     padding: 10px 15px;
+}
+.navitems > a{
+    text-decoration: none;
+    color: white;
+    font-size: 1.2em;
 }
