--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -1,5 +1,10 @@
 .banners {
   width: 100%;
-  height: 410px;
+  height: 500px;
   object-fit: cover;
+}
+.heads{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
